# qdrant_demo

./: .gitignore  Dockerfile  docker-compose-local.yaml  pyproject.toml  questions_to_answer.txt  ubuntu_setup_commands.sh  useful_commands_list  useful_references
frontend/src/api/: search.ts
frontend/src/components/InteractiveTable/: InteractiveTable.css  index.tsx
frontend/src/components/MainSection/: index.tsx  style.tsx
frontend/src/hooks/: useGetSearchResult.ts
frontend/src/theme/: index.tsx
qdrant_demo/: config.py  init_collection_startups.py  neural_searcher.py  prep_and_embed_data_startups.py  service.py  text_searcher.py  update_collection_startups.py
useful_info/: qdrant_entire_demo_repo_hierarchy.txt  qdrant_entire_demo_repo_scraped.txt  ubuntu_setup_commands.sh  useful_references
