[tool.poetry]
name = "qdrant_demo"
version = "0.1.0"
description = "Qdrant vector similarity engine demo"
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
psutil = "^6.0.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
loguru = ">=0.7.2,<0.8.0"  # Compatible with fastembed
requests = "^2.25.1"
tqdm = "^4.66.1"
qdrant-client = {extras = ["fastembed"], version = ">=1.10.0"}
fastembed = "^0.2.7"  # Ensure the latest version

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
